    ADDED: mountman gui option: Show only removable devices
    ADDED: tabs have close buttons
    ADDED: reset button for filter dialog
    ADDED: option: Panel > Operation > Filter dialog remembers settings
    ADDED: tabs can be dragged to the other side
    ADDED: action: Move Current Tab to Other Side - shortcut: CTRL + SHIFT + O
    ADDED: view: iconsizes 64, 128, 256
    ADDED: history is saved/restored
    ADDED: action: Restore Selection
    ADDED: option: Panel > Operation > Unselect files before copy/move
    ADDED: support for xz archives

    CHANGED: new default panel layout
    CHANGED: option: Panel > View > Show previews -> Show previews by default
    CHANGED: removed option "Show free disk space in the Totalsbar"
             since that setting is controlled by the layout chosen in Panel > Layout
    CHANGED: removed option "Preserve Attributes" - KIO always preserves Attributes
    CHANGED: option: Panel > Filelist icon size -> Default icon size
    CHANGED: quickfilter follows case sensivity setting of quicksearch
    CHANGED: quickfilter expands wildcards
    CHANGED: duplicate tab / open in new tab:
             create the new tab next to the current one.
    CHANGED: filter settings are saved/restored individually for each tab.
    CHANGED: filter settings are remembered when changing view type
    CHANGED: All view settings are saved/restored individually for each tab.

    FIXED: Url commandline argument opens a new tab instead of switching to an existing one
    FIXED: root mode action does not work with newer versions of kdesu, thanks to CyberCastle
    FIXED: switching tabs sometimes doesn't switch the panel
    FIXED: [ 3004510 (sf.net) ] Double-clicking executables start in ~/Documents folder
    FIXED: [ 2996188 (sf.net) ] relative path for custom folder icon doesn't work
    FIXED: [ 2915020 (sf.net) ] wrong icon for directory symlink
    FIXED: when switching tabs, sometimes the new tab isn't set active