@@ -60,6 +60,8 @@ QString KrLayoutFactory::layoutDescription(QString layoutName)
 {
     if(layoutName == DEFAULT_LAYOUT)
         return i18n("Default");
+    else if(layoutName == "krusader:compact")
+        return i18n("Compact");
     else if(layoutName == "krusader:classic")
         return i18n("Classic Krusader layout");
     else
