@@ -1,3 +1,4 @@
+    ADDED: options: Panel > Layout: "Compact", "Classic Krusader Layout"
     ADDED: mountman gui option: Show only removable devices
     ADDED: tabs have close buttons
     ADDED: reset button for filter dialog
